[gd_scene load_steps=7 format=3 uid="uid://c3gfhhqrstnjr"]

[ext_resource type="Script" path="res://Scripts/squirrel_node.gd" id="1_n44ba"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ptre"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.972093, 0.685178, 0.969086, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q727i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hiqfo"]
bg_color = Color(0.2, 0.6, 1, 0.2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_051ta"]
bg_color = Color(0.2, 0.6, 1, 0.4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kvhwk"]

[node name="SquirrelNode" type="Panel"]
offset_right = 149.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2ptre")
script = ExtResource("1_n44ba")

[node name="avatar" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 5.0
offset_right = 132.0
offset_bottom = 77.0
expand_mode = 2

[node name="name_label" type="Label" parent="."]
layout_mode = 2
offset_left = 23.0
offset_top = 74.0
offset_right = 128.0
offset_bottom = 97.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 149.0
offset_bottom = 100.0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_q727i")
theme_override_styles/hover = SubResource("StyleBoxFlat_hiqfo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_051ta")
theme_override_styles/normal = SubResource("StyleBoxEmpty_kvhwk")
text = "BOUTON"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 115.0
offset_right = 105.0
offset_bottom = 138.0
